--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
   font-family: "Raleway", sans-serif;
+}
+
+body {
+  height: 100%;
 }
