--- a/src/components/leaders/leaders.style.css
+++ b/src/components/leaders/leaders.style.css
@@ -26,7 +26,36 @@
   align-items: center;
   color: white;
   border-radius: 15px;
-  border: 1px solid rgb(180, 180, 180);
+  position: relative;
+}
+
+.card {
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: all 0.4s ease-in-out;
+  width: 100%;
+}
+.card:hover {
+  transform: rotateY(180deg);
+}
+.card .side {
+  backface-visibility: hidden;
+  border-radius: 6px;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+}
+.card .back {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #eaeaed;
+  color: #008000;
+  line-height: 150px;
+  text-align: center;
+  transform: rotateY(180deg);
 }
 
 .leaders__chart__box-green {
