--- a/src/components/navBar/navBar.style.css
+++ b/src/components/navBar/navBar.style.css
@@ -45,6 +45,10 @@
   margin-left: 0px;
 }
 
+#root > div > div > div.navigation-bar.navbar-dark > div > div > button {
+  margin-left: 0px;
+}
+
 
 @media screen and (max-width: 750px) {
   .navigation-bar {
