--- a/src/components/dataTable/dataTable.style.css
+++ b/src/components/dataTable/dataTable.style.css
@@ -11,6 +11,21 @@ tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
+.table-row-dark {
+  color: white;
+  background-color: rgb(60, 100, 100);
+}
+
+.table-row-dark:nth-child(even) {
+  color: white;
+  background-color: rgb(98, 122, 122);
+}
+
+.table-row-dark:hover {
+  color: black;
+  background-color: rgb(178, 204, 204);
+}
+
 tr:hover {
   background-color: #ddd;
 }
