--- a/src/pages/signUp/signUp.style.css
+++ b/src/pages/signUp/signUp.style.css
@@ -3,8 +3,13 @@
   height: 100vh;
   background-image: url("./../../images/nick-chong-N__BnvQ_w18-unsplash.jpg");
   background-position: center;
+  position: relative;
 }
 
 .sign-up__box {
-  margin-top: 00px;
+  margin-top: 0px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
