--- a/src/pages/signUp/signUp.style.css
+++ b/src/pages/signUp/signUp.style.css
@@ -1,26 +1,14 @@
-.sign-up__background {
-  width: 100%;
-  height: 100vh;
-  background-image: url("./../../images/nick-chong-N__BnvQ_w18-unsplash.jpg");
-  background-position: center;
-}
-
-.sign-up__box {
-  margin-top: 0px;
-}
-
 .google-btn {
-  width: 100%;
   margin: 0 auto;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 #root
   > div
-  > div
   > main
+  > div.MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation6.MuiGrid-root.MuiGrid-item.MuiGrid-grid-xs-12.MuiGrid-grid-sm-8.MuiGrid-grid-md-5.css-gadse4-MuiPaper-root-MuiGrid-root
   > div
   > form
   > div.MuiGrid-root.MuiGrid-container.css-16g5rpk-MuiGrid-root {
-  justify-content: center;
+  justify-content: flex-start;
 }
