--- a/src/components/chart/chart.style.css
+++ b/src/components/chart/chart.style.css
@@ -1,8 +1,10 @@
 .chart__box {
   padding: 20px;
-  width: 600px;
+  width: 70%;
   background-color: white;
   margin: 0 auto;
+  display: flex;
+  justify-content: center;
 }
 
 @media screen and (max-width: 750px) {
